Fix search bar not shrinking below a certain width in Firefox
The search bar was not shrinking any further when the toolbar
width went below about ~500 pixels in Firefox, so
the lock and menu buttons on the right were
not visible in the add-on popup which has a smaller
width than this.

--- a/webui/app.less
+++ b/webui/app.less
@@ -219,6 +219,12 @@ html, body {
 	background-color: @material-color-primary;
 	font-size: 20px;
 	outline: none;
+
+	/* enable the search field to shrink
+	   when the width of the toolbar is collapsed
+	   in Firefox
+	*/
+	overflow: hidden;
 }
 
 .searchFieldInput::-webkit-input-placeholder {
